add privacy/terms/app-ads.txt for store cupang_51

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>BigEyes · 사진 요약 + 쿠팡 최저가</title>
 <meta name="theme-color" content="#0b1020"/>
-<!-- 카메라 권한 힌트(일부 브라우저/웹뷰에서 필요) -->
-<meta http-equiv="Permissions-Policy" content="camera=(self)">
+<meta http-equiv="Permissions-Policy" content="camera=(self)"/>
 <style>
 :root { --bg:#0b1020; --card:#121833; --ink:#e8ecff; --muted:#9aa5d1; --accent:#7aa2ff; --line:#223066; }
 *{box-sizing:border-box}
-body{margin:0;color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Noto Sans KR,Apple SD Gothic Neo,Malgun Gothic,sans-serif;background:#0b1020}
-header{position:sticky;top:0;padding:16px;border-bottom:1px solid var(--line);background:#0b1020cc;backdrop-filter:blur(6px);text-align:center}
-h1{margin:0;font-size:20px}
-main{max-width:900px;margin:0 auto;padding:16px;display:grid;gap:14px}
+html,body{height:100%}
+body{
+  margin:0;color:var(--ink);
+  font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Noto Sans KR,Apple SD Gothic Neo,Malgun Gothic,sans-serif;
+  background:#0b1020;
+  /* 상단 안전영역 보정: 상태바가 겹쳐 보이는 기기에서 위로 끌어올려 보이는 느낌 해결 */
+  padding-top:env(safe-area-inset-top, 0);
+}
+header{
+  position:sticky;top:0;padding:14px 16px calc(10px + env(safe-area-inset-top,0));
+  border-bottom:1px solid var(--line);
+  background:#0b1020cc;backdrop-filter:blur(6px);text-align:center;z-index:5
+}
+h1{margin:0;font-size:19px}
+main{
+  max-width:900px;margin:0 auto;
+  padding:14px 16px 24px;display:grid;gap:14px;
+}
 .card{background:#121833e8;border:1px solid var(--line);border-radius:16px;padding:16px}
 .lead{text-align:center;line-height:1.8}
 .credit{font-weight:700;color:#b9c8ff}
@@ -21,6 +34,7 @@ main{max-width:900px;margin:0 auto;padding:16px;display:grid;gap:14px}
 .grid2{display:grid;gap:10px;grid-template-columns:repeat(2,1fr)}
 .btn{display:inline-flex;align-items:center;justify-content:center;gap:8px;padding:14px 16px;border-radius:14px;background:#1a2a6b;border:1px solid #3350aa;color:#fff;font-weight:700;cursor:pointer}
 .btn.secondary{background:#0e1430;border-color:#2a3a7a;color:#c9d3ff}
+.btn.ghost{background:transparent;border:1px dashed #2a3a7a;color:#c9d3ff}
 .btn[disabled]{opacity:.5;cursor:not-allowed}
 input[type="file"]{display:none}
 input[type="text"]{width:100%;padding:12px 14px;border-radius:12px;border:1px solid #2a3a7a;background:#0e1430;color:#e8ecff}
@@ -36,16 +50,12 @@ textarea.summary-box{
 .section-title{margin:0 0 6px}
 
 /* 로딩 오버레이 */
-#loadingOverlay{
-  position:fixed; inset:0; display:none; place-items:center;
-  background:rgba(6,10,25,.58); backdrop-filter: blur(6px); z-index:9999;
-}
+#loadingOverlay{position:fixed; inset:0; display:none; place-items:center;
+  background:rgba(6,10,25,.58); backdrop-filter: blur(6px); z-index:9999;}
 #loadingOverlay.show{display:grid}
-.loader{
-  display:inline-flex; align-items:center; gap:10px;
+.loader{display:inline-flex; align-items:center; gap:10px;
   background:#121833; border:1px solid #223066; color:#e8ecff;
-  padding:12px 18px; border-radius:12px; font-weight:700;
-}
+  padding:12px 18px; border-radius:12px; font-weight:700;}
 .loader-dot{width:8px;height:8px;border-radius:50%;background:#7aa2ff;animation:bounce .9s infinite ease-in-out}
 .loader-dot:nth-child(2){animation-delay:.15s}
 .loader-dot:nth-child(3){animation-delay:.3s}
@@ -58,6 +68,12 @@ textarea.summary-box{
   -webkit-background-clip:text; background-clip:text; color:transparent;
 }
 @media (min-width:680px){ .brand-line{ font-size:24px; } }
+
+/* 라이브카메라 모달 */
+#liveCam{position:fixed;inset:0;display:none;place-items:center;background:#000a;z-index:10000}
+#liveCam.show{display:grid}
+.live-wrap{background:#0b1020;border:1px solid #223066;border-radius:16px;padding:12px;width:min(92vw,420px)}
+video{width:100%;border-radius:12px;background:#000}
 </style>
 </head>
 <body>
@@ -68,6 +84,17 @@ textarea.summary-box{
   <div class="loader">
     <span class="loader-dot"></span><span class="loader-dot"></span><span class="loader-dot"></span>
     <span>처리 중입니다... 잠시만요</span>
+  </div>
+</div>
+
+<!-- 라이브 카메라 모달 -->
+<div id="liveCam" role="dialog" aria-modal="true" aria-label="카메라 촬영">
+  <div class="live-wrap">
+    <video id="liveVideo" autoplay playsinline></video>
+    <div class="grid2" style="margin-top:10px">
+      <button id="btnShoot" class="btn">📸 촬영</button>
+      <button id="btnCloseLive" class="btn secondary">닫기</button>
+    </div>
   </div>
 </div>
 
@@ -95,20 +122,21 @@ textarea.summary-box{
     </div>
 
     <div class="row">
+      <!-- 기본 카메라(브라우저/웹뷰가 파일선택만 열어도 OK) -->
       <label class="btn">
         📷 카메라로 찍기
-        <!-- capture 힌트 강화 -->
         <input id="fileCam" type="file" accept="image/*;capture=camera" capture="environment">
       </label>
       <label class="btn">
         📁 파일에서 선택
         <input id="filePick" type="file" accept="image/*;capture=camera">
       </label>
+      <!-- 확실히 카메라 오픈: getUserMedia -->
+      <button id="btnLive" class="btn ghost">🎥 바로 촬영(베타)</button>
     </div>
 
     <img id="imgPrev" class="preview hidden" alt="preview"/>
 
-    <!-- 액션: 두 선택지 -->
     <div class="grid2" style="margin-top:8px">
       <button id="btnAnalyze" class="btn hidden">🔍 작은 글씨 요약</button>
       <button id="btnCoupangFlow" class="btn secondary hidden">🛒 쿠팡 최저가 가기</button>
@@ -116,7 +144,7 @@ textarea.summary-box{
     <p class="small">※ 본 링크는 쿠팡 파트너스 활동으로 일정 수수료를 받을 수 있습니다</p>
   </section>
 
-  <!-- STEP 2-A: 보고서(읽기 전용) -->
+  <!-- STEP 2-A: 보고서 -->
   <section id="stepSummary" class="card hidden">
     <h2 class="section-title">2) 요약 결과(보고서)</h2>
     <textarea id="sumReadOnly" class="summary-box" readonly></textarea>
@@ -157,22 +185,18 @@ textarea.summary-box{
 </main>
 
 <script>
-/* ===== 앱/웹뷰: 헤더 자동 숨김 ===== */
+/* ===== 앱/웹뷰: 헤더 자동 숨김(메인화면 안정감 유지, 웹뷰에선 숨김) ===== */
 (function () {
   const p = new URLSearchParams(location.search);
-  const isWebView =
-    /\bwv\b/i.test(navigator.userAgent) ||               // Android WebView
-    /Version\/\d+\.\d+ Chrome\/\d+ Mobile/i.test(navigator.userAgent);
+  const isWebView = /\bwv\b/i.test(navigator.userAgent) || /Version\/\d+\.\d+ Chrome\/\d+ Mobile/i.test(navigator.userAgent);
   if (p.get('app') === '1' || isWebView) {
     const h = document.getElementById('appHeader');
     if (h) h.style.display = 'none';
-    // 탭 타이틀도 최소화
     document.title = ' ';
   }
 })();
 
 /* ===== 설정 ===== */
-const API_BASE = ""; // 같은 도메인 상대호출 (/api/summarize)
 const PARTNER_ID = 'AF2974050';
 const SUB_ID     = 'bigeyes';
 const LS_KEY = 'be_credits_v08';
@@ -181,7 +205,7 @@ const MAX_CREDITS = 9999;
 
 /* ===== 상태/요소 ===== */
 let lastImageBlob = null;
-let lastOCR = null;           // 서버에서 받은 payload(=요약 + 추천검색어)
+let lastOCR = null;
 let ocrDoneForThisImage = false;
 
 const $ = id => document.getElementById(id);
@@ -194,6 +218,8 @@ const sumBox=$('sumBox'), btnEditSum=$('btnEditSum'), kwFinal=$('kwFinal');
 const btnBack2=$('btnBack2'), btnGoCoupang=$('btnGoCoupang');
 const btnReward=$('btnReward');
 const loadingOverlay=$('loadingOverlay');
+const btnLive=$('btnLive'), liveEl=$('liveCam'), liveVideo=$('liveVideo');
+const btnShoot=$('btnShoot'), btnCloseLive=$('btnCloseLive');
 
 /* ===== 공통 ===== */
 async function showLoading(on=true){
@@ -210,7 +236,7 @@ function renderCredits(v=loadCredits()){
 }
 (function initCredits(){const p=new URLSearchParams(location.search); if(p.has('reset')) localStorage.removeItem(LS_KEY); renderCredits();})();
 
-/* ===== 업로드 유틸 ===== */
+/* ===== 유틸 ===== */
 async function toBase64(file, maxSide=1600, quality=0.8){
   const img = await new Promise(res=>{ const i=new Image(); i.onload=()=>res(i); i.src=URL.createObjectURL(file); });
   const {width, height} = img;
@@ -220,31 +246,17 @@ async function toBase64(file, maxSide=1600, quality=0.8){
   const ctx = canvas.getContext('2d'); ctx.drawImage(img,0,0,w,h);
   return canvas.toDataURL('image/jpeg',quality).split(',')[1];
 }
+function dataURLtoBlob(u){const a=u.split(','),m=a[0].match(/:(.*?);/)[1];const b=atob(a[1]);const n=b.length;const u8=new Uint8Array(n);for(let i=0;i<n;i++)u8[i]=b.charCodeAt(i);return new Blob([u8],{type:m});}
 function coupangAppUrl(q){return 'coupang://search?q='+encodeURIComponent(q)}
 function coupangWebUrl(q){const base='https://www.coupang.com/np/search';const params=new URLSearchParams({q,channel:'user',lptag:PARTNER_ID,subId:SUB_ID});return `${base}?${params.toString()}`}
 
-/* ===== 로컬 폴백: 요약→검색어 ===== */
-function keywordFromSummary(text=''){
-  const raw = String(text||'').split('\n').map(s => s.trim()).filter(Boolean);
-  const skip = /(■|가격|원|할인|행사|쿠폰|기간|주의|경고|보관|사용법|참조)/;
-  const lines = raw.filter(s => !/^■/.test(s)).filter(s => !skip.test(s));
-  const bullets = lines.filter(s => /^[-•]/.test(s)).map(s => s.replace(/^[-•]\s*/, '').trim());
-  const tokenLike = /([A-Z]{2,}\d{1,}|\d{3,}[A-Z]{1,}|[A-Za-z]{3,}\d{1,}|\b[가-힣A-Za-z]{2,}\b)/g;
-  const candidates = (bullets.length? bullets : lines).map(s => (s.match(tokenLike)||[]).join(' ').trim()).filter(s => s && s.length >= 2);
-  let out = (candidates[0] || (bullets[0] || lines[0] || '')).replace(/[()［\]【】{}<>:;'"“”‘’]/g, ' ').replace(/\s{2,}/g, ' ').trim();
-  if (out.length > 80) out = out.slice(0, 80);
-  return out;
-}
-
-/* ===== 보고서 빌드(맨 아래 ‘쿠팡 추천 검색어’ 노출) ===== */
+/* ===== 보고서 빌드 ===== */
 function buildReport(payload){
   const lines=[];
   const core = String(payload.coreSummary||'').trim();
   if(core){
     lines.push('■ 핵심 요약');
-    for(const l of core.split('\n').filter(Boolean)){
-      lines.push(' - ' + l.replace(/^\s*-\s*/,'').trim());
-    }
+    for(const l of core.split('\n').filter(Boolean)){ lines.push(' - ' + l.replace(/^\s*-\s*/,'').trim()); }
     lines.push('');
   }
   const cats = Array.isArray(payload.categories)? payload.categories : [];
@@ -253,16 +265,11 @@ function buildReport(payload){
     const sum = String(c.summary||'').trim();
     if(!sum) continue;
     lines.push(`■ ${title}`);
-    for(const l of sum.split('\n').filter(Boolean)){
-      lines.push(' - ' + l.replace(/^\s*-\s*/,'').trim());
-    }
+    for(const l of sum.split('\n').filter(Boolean)){ lines.push(' - ' + l.replace(/^\s*-\s*/,'').trim()); }
     lines.push('');
   }
   const rq = String(payload.coupangQuery||'').trim();
-  if (rq){
-    lines.push('■ 쿠팡 추천 검색어');
-    lines.push(' - ' + rq, '');
-  }
+  if (rq){ lines.push('■ 쿠팡 추천 검색어'); lines.push(' - ' + rq, ''); }
   return lines.join('\n');
 }
 
@@ -271,7 +278,7 @@ let _pickBusy=false, _lastPickKey='';
 async function onPick(file, from){
   try{
     if(!file) return;
-    const key = `${file.name}|${file.size}|${file.lastModified}`;
+    const key = `${file.name}|${file.size}|${file.lastModified||Date.now()}`;
     if(_pickBusy || key===_lastPickKey) return;
     _pickBusy=true; _lastPickKey=key;
 
@@ -291,7 +298,40 @@ async function onPick(file, from){
 fileCam.addEventListener('change', e=>{ onPick(e.target.files?.[0], 'cam'); });
 filePick.addEventListener('change', e=>{ onPick(e.target.files?.[0], 'pick'); });
 
-/* ===== OCR (한 번만 차감) ===== */
+/* ===== 라이브 카메라(확실히 열기) ===== */
+let liveStream=null;
+const btnLiveEl = document.getElementById('btnLive');
+btnLiveEl.addEventListener('click', async ()=>{
+  try{
+    liveEl.classList.add('show');
+    liveStream = await navigator.mediaDevices.getUserMedia({
+      video: { facingMode: { ideal:'environment' } }, audio:false
+    });
+    liveVideo.srcObject = liveStream;
+  }catch(e){
+    liveEl.classList.remove('show');
+    alert('카메라를 사용할 수 없습니다. 브라우저/앱 권한을 확인해주세요.');
+  }
+});
+btnCloseLive.addEventListener('click', ()=>{
+  if(liveStream){ liveStream.getTracks().forEach(t=>t.stop()); liveStream=null; }
+  liveEl.classList.remove('show');
+});
+btnShoot.addEventListener('click', async ()=>{
+  try{
+    const v = liveVideo;
+    if(!v.videoWidth){ return alert('카메라 초기화 중입니다. 잠시 후 다시 시도하세요.'); }
+    const canvas=document.createElement('canvas'); canvas.width=v.videoWidth; canvas.height=v.videoHeight;
+    const ctx=canvas.getContext('2d'); ctx.drawImage(v,0,0,canvas.width,canvas.height);
+    const dataURL=canvas.toDataURL('image/jpeg',0.9);
+    const blob=dataURLtoBlob(dataURL);
+    const file=new File([blob], `live_${Date.now()}.jpg`, {type:'image/jpeg', lastModified:Date.now()});
+    await onPick(file,'cam');
+    btnCloseLive.click();
+  }catch(e){ alert('촬영에 실패했습니다. 다시 시도해주세요.'); }
+});
+
+/* ===== OCR(한 번만 차감) ===== */
 let _ocrPromise=null;
 async function ensureOCR(){
   if(!lastImageBlob) throw new Error('이미지를 선택하세요.');
@@ -320,7 +360,19 @@ async function ensureOCR(){
   return _ocrPromise;
 }
 
-/* ===== ① 작은 글씨 요약 → 보고서 + ‘검색 전 확인’ 연동 ===== */
+/* ===== 플로우 ===== */
+const keywordFromSummary=(t='')=>{
+  const raw=String(t||'').split('\n').map(s=>s.trim()).filter(Boolean);
+  const skip=/(■|가격|원|할인|행사|쿠폰|기간|주의|경고|보관|사용법|참조)/;
+  const lines=raw.filter(s=>!/^■/.test(s)).filter(s=>!skip.test(s));
+  const bullets=lines.filter(s=>/^[-•]/.test(s)).map(s=>s.replace(/^[-•]\s*/,'').trim());
+  const token=/([A-Z]{2,}\d{1,}|\d{3,}[A-Z]{1,}|[A-Za-z]{3,}\d{1,}|\b[가-힣A-Za-z]{2,}\b)/g;
+  const cands=(bullets.length?bullets:lines).map(s=>(s.match(token)||[]).join(' ').trim()).filter(s=>s&&s.length>=2);
+  let out=(cands[0]||(bullets[0]||lines[0]||'')).replace(/[()［\]【】{}<>:;'"“”‘’]/g,' ').replace(/\s{2,}/g,' ').trim();
+  if(out.length>80) out=out.slice(0,80);
+  return out;
+};
+
 btnAnalyze.addEventListener('click', async ()=>{
   await showLoading(true);
   try{
@@ -328,17 +380,15 @@ btnAnalyze.addEventListener('click', async ()=>{
     const report=buildReport(payload);
     sumReadOnly.value=report;
 
-    const btnGoCoupangDirect=document.getElementById('btnGoCoupangDirect');
-    if(btnGoCoupangDirect){
-      btnGoCoupangDirect.onclick=()=>{
-        sumBox.value=report;
-        sumBox.readOnly=true; btnEditSum.textContent='✏️ 수정';
-        kwFinal.value=(payload.coupangQuery && payload.coupangQuery.trim()) || keywordFromSummary(report);
-        stepSummary.classList.add('hidden');
-        stepCoupang.classList.remove('hidden');
-        window.scrollTo({top:0,behavior:'smooth'});
-      };
-    }
+    const btnGo=document.getElementById('btnGoCoupangDirect');
+    btnGo.onclick=()=>{
+      sumBox.value=report;
+      sumBox.readOnly=true; btnEditSum.textContent='✏️ 수정';
+      kwFinal.value=(payload.coupangQuery && payload.coupangQuery.trim()) || keywordFromSummary(report);
+      stepSummary.classList.add('hidden');
+      stepCoupang.classList.remove('hidden');
+      window.scrollTo({top:0,behavior:'smooth'});
+    };
 
     stepUpload.classList.add('hidden');
     stepSummary.classList.remove('hidden');
@@ -346,9 +396,8 @@ btnAnalyze.addEventListener('click', async ()=>{
   }catch(e){ alert(e.message||'오류가 발생했습니다.'); }
   finally{ await showLoading(false); }
 });
-btnBackSum.addEventListener('click', ()=>{ stepSummary.classList.add('hidden'); stepUpload.classList.remove('hidden'); });
+document.getElementById('btnBackSum').addEventListener('click', ()=>{ stepSummary.classList.add('hidden'); stepUpload.classList.remove('hidden'); });
 
-/* ===== ② 업로드 단계의 ‘쿠팡 최저가 가기’도 동일 연동 ===== */
 btnCoupangFlow.addEventListener('click', async ()=>{
   await showLoading(true);
   try{
@@ -364,7 +413,6 @@ btnCoupangFlow.addEventListener('click', async ()=>{
   finally{ await showLoading(false); }
 });
 
-/* ===== ③ 검색 전 확인 화면에서 요약 수정 시 키워드 보정 ===== */
 let isEditingSummary=false;
 btnEditSum.addEventListener('click', ()=>{
   isEditingSummary=!isEditingSummary;
@@ -376,7 +424,6 @@ btnEditSum.addEventListener('click', ()=>{
   }
 });
 
-/* ===== 쿠팡 이동 ===== */
 btnGoCoupang.addEventListener('click', ()=>{
   const keyword=(kwFinal.value||'').trim();
   if(!keyword) return alert('검색어를 입력하세요.');
@@ -385,7 +432,6 @@ btnGoCoupang.addEventListener('click', ()=>{
 });
 btnBack2.addEventListener('click', ()=>{ stepCoupang.classList.add('hidden'); stepUpload.classList.remove('hidden'); });
 
-/* ===== 보상형 광고(+1) ===== */
 btnReward.addEventListener('click', ()=>{ saveCredits(loadCredits()+1); alert('광고 시청 완료! 1회 충전되었습니다.'); });
 </script>
 </body>
